--- a/flsk/templates/base.html
+++ b/flsk/templates/base.html
@@ -8,7 +8,22 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
-    {% block content %}{% endblock %}
+    <ul class="nav mb-2 pt-2">
+      <li class="nav-item">
+        <a class="nav-link link-secondary" href="{{ url_for('index')}}">NOTES</a>
+      </li>
+      {% if g.user['id'] %}
+      <li class="nav-item">
+        <a class="nav-link link-secondary" href="{{ url_for('adm.add')}}">Add</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link link-secondary" href="{{ url_for('adm.logout')}}">Logout</a>
+      </li>
+      {% endif %}
+    </ul>
+    <div class="container">
+      {% block content %}{% endblock %}
+    </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
